# hpc-final-project

./: .gitignore  README.md  exec_proj_experiments.bash
fp-c/: CMakeLists.txt
fp-c/include/fft/: fft.h  vector.h
fp-c/include/matrix/: matrix.h  multiply.h
fp-c/include/util/: argparse.h  math.h
fp-c/lib/fft/: fft.c  vector.c
fp-c/lib/matrix/: matrix.c  multiply.c
fp-c/lib/util/: argparse.c  math.c
fp-c/tools/fft/: main.c
fp-c/tools/matmul/: main.c
fp-cpp/: .clang-tidy  CMakeLists.txt
fp-cpp/include/FFT/: FFT.h  Vector.h
fp-cpp/include/Matrix/: Matrix.h  Multiply.h
fp-cpp/include/Util/: ArgParse.h  Math.h
fp-cpp/lib/FFT/: FFT.cpp  Vector.cpp
fp-cpp/lib/Matrix/: Matrix.cpp  Multiply.cpp
fp-cpp/tools/fft/: main.cpp
fp-cpp/tools/matmul/: main.cpp
fp-go/: go.mod
fp-go/fft/: fft.go  fft_test.go  io.go  io_test.go
fp-go/matrix/: compare.go  compare_test.go  dense.go  dense_test.go  interface.go  io.go  io_test.go  multiplication.go  multiplication_test.go
fp-go/tools/fft/: main.go
fp-go/tools/genmat/: main.go
fp-go/tools/genvec/: main.go
fp-go/tools/matmul/: main.go
fp-go/util/: matrixio.go  vectorio.go
fp-go/util/math/: math.go  math_test.go
fp-rust/: Cargo.toml
fp-rust/src/: fft.rs  lib.rs  matrix.rs  util.rs
fp-rust/src/fft/: transform.rs
fp-rust/src/matrix/: multiply.rs
